# readable-regex

./: .gitignore  LICENSE  README.md  pyproject.toml
agent_skills/: .cursorrules
demos/: demo.py
docs/: index.html
src/readable_regex/: __init__.py  builder.py  compiler.py  components.py  exclude_proxy.py  flags.py
tests/: test_builder.py  test_components.py  test_execution.py  test_integration.py  test_parity.py
