[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "readable-regex"
version = "0.2.0"
description = "A fluent, chainable API for building regular expressions that read like English"
requires-python = ">= 3.10"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Derwin Emmanuel" },
]
keywords = ["regex", "regular-expressions", "fluent", "builder", "readable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/molestreettechllc-dev/readable-regex"
Documentation = "https://molestreettechllc-dev.github.io/readable-regex/"
Repository = "https://github.com/molestreettechllc-dev/readable-regex"
Issues = "https://github.com/molestreettechllc-dev/readable-regex/issues"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
